assets/main.scss
---

---
@charset "utf-8";

// Our variables
$base-font-family: QuicksandBold, "Helvetica Neue", Helvetica, Arial, sans-serif;
$base-subheading-font-family: RalewayLight, Helvetica;
$base-font-size:   16px;
$base-font-weight: 400;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.5;

$spacing-unit:     30px;

$button-font-family: QuicksandRegular, Helvetica;
$button-width: 280px;
$button-height: 85px;
$button-font-size: 18px;

$footer-background-color: #666;

$text-color:       #fff;
$background-color: #ff7373;
$brand-color:      #2a7ae2;
$hover-button-color: #ffc2e4;

$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

// Width of the content area
$content-width:    800px;

$on-palm:          600px;
$on-laptop:        800px;

@font-face {
  font-family: 'QuicksandBold';
  src: url('./fonts/Quicksand-Bold.ttf');
}

@font-face {
  font-family: 'QuicksandRegular';
  src: url('./fonts/Quicksand-Regular.ttf');
}

@font-face {
  font-family: 'RalewayBold';
  src: url('./fonts/Raleway-Bold.ttf');
}

@font-face {
  font-family: 'RalewayRegular';
  src: url('./fonts/Raleway-Regular.ttf');
}

@font-face {
  font-family: "RalewayLight";
  src: url('./fonts/Raleway-Light.ttf');
}

// Import partials from the `minima` theme.
// @import "minima";

body {
  background-color: $background-color;
  margin: 0;
  padding: 0;
}

.quote-container {
  display: flex;
  justify-content: center;

  blockquote {
    font-family: $base-font-family;
    color: $text-color;
    width: 800px;
    font-size: 25px;
    letter-spacing: 6px;

    p {
      text-align: justify;
    }

    footer {
      font-family: $base-subheading-font-family;
      color: $text-color;
      font-size: 12px;
      margin-left: 528px;
    }

  } 

}

.about-container {
  
  margin-left: 188px;
  margin-top: 175px;

  .about-heading {
    h2 {
      font-size: 22px;
      color: $text-color;
      text-decoration: underline;
      font-family: $base-font-family;
      letter-spacing: 6px;
      margin-bottom: 35px;
    }
  }
  
  .about-content {
    
    display: flex;
    justify-content: center;
    margin-right: 115px;

    .text { 
      margin-right: 25px;

      p {
        font-size: 16px;
        color: $text-color;
        font-family: $base-subheading-font-family;
        letter-spacing: 2px;
        margin-top: -15px;
        line-height: 22px;
        width: 600px;
      }

    }

    .profile-image {

      margin-right: 39px;
      margin-top: -9px;

      img {
        height: 300px;
        width: 300px;
      }
    }

  }


}

.services-container {

  margin-top: 150px;
  margin-left: 138px;

  font-family: $base-subheading-font-family;
  color: $text-color;
  text-align: left;
  letter-spacing: 4px;
  
  .services-heading {
    margin-left: 47px;
    font-family: $base-font-family;
    color: $text-color;
    text-decoration: underline;
    font-size: 18px;
  }

  .left-pair {
    width: 450px;
  }

  .right-pair {
    width: 450px;
    margin-left: 35px;
  }

  .design-pair {
    display: flex;
    justify-content: center;
    margin-left: -96px;
    margin-bottom: 100px;
    font-size: 12px;
  }

  .printdesign {
    margin-left: 48px;
    font-size: 12px;
  }
}
/* ... */

